--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body oncontextmenu="return false;">
+<body>
     <canvas id="game"></canvas>
     <!--MAIN SCRIPT-->
     <script src="./js/perlin.js"></script>
