--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <canvas id="game"></canvas>
     <!--MAIN SCRIPT-->
     <script src="./js/perlin.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
