--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flow fields | Experiment by Arsène Brosy</title>
 
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <canvas id="game"></canvas>
-    <!--MAIN SCRIPT-->
-    <script src="./js/perlin.js"></script>
-    <script src="js/script.js"></script>
+    <h1>Flow Fields</h1>
+    <p>Experiment by Arsène Brosy</p>
+    <div id="modes">
+        <button>
+            <img src="images/miniatures/simple.png">
+            Classique
+        </button>
+    </div>
 </body>
 </html>
