--- a/index.html
+++ b/index.html
@@ -9,11 +9,28 @@
 <body>
     <h1>Flow Fields</h1>
     <p>Experiment by Arsène Brosy</p>
+    <h2 style="margin-top: 50px">Variations</h2>
     <div id="modes">
-        <button>
-            <img src="images/miniatures/simple.png">
+        <a href="flow-fields.html?mode=simple">
+            <img src="images/miniatures/simple.png" alt="flow field">
             Classique
-        </button>
+        </a>
+        <a href="flow-fields.html?mode=multicolor">
+            <img src="images/miniatures/multicolor.png" alt="flow field">
+            Multicolore
+        </a>
+        <a href="flow-fields.html?mode=infinite">
+            <img src="images/miniatures/infinite.png" alt="flow field">
+            Infini
+        </a>
+        <a href="flow-fields.html?mode=infinite-trails">
+            <img src="images/miniatures/infinite-trails.png" alt="flow field">
+            Tracés infinis
+        </a>
+        <a href="flow-fields.html?mode=mouse">
+            <img src="images/miniatures/mouse.png" alt="flow field">
+            Suivre la souris
+        </a>
     </div>
 </body>
 </html>
