--- a/flow-fields.html
+++ b/flow-fields.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flow fields | Experiment by Arsène Brosy</title>
 
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/flow-fields.css">
 </head>
 <body>
     <canvas id="game"></canvas>
     <!--MAIN SCRIPT-->
     <script src="./js/perlin.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/redirect.js"></script>
 </body>
 </html>
