--- a/flow-fields.html
+++ b/flow-fields.html
@@ -5,12 +5,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flow fields | Experiment by Arsène Brosy</title>
 
-    <link rel="stylesheet" href="css/flow-fields.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <canvas id="game"></canvas>
     <!--MAIN SCRIPT-->
     <script src="./js/perlin.js"></script>
-    <script src="js/redirect.js"></script>
+    <script src="./js/script.js"></script>
+
+    <div id="settings">
+        <h1>Paramètres</h1>
+        <h2>Affichage</h2>
+        <div class="parameter">
+            <input id="reset-screen" type="checkbox" checked>
+            <label for="reset-screen">Effacer l'écran à chaque frame</label>
+        </div>
+        <div class="parameter">
+            <input id="show-trails" type="checkbox">
+            <label for="show-trails">Afficher les tracés des particules</label>
+        </div>
+        <div class="parameter" id="trails-size-parameter" style="display: none">
+            <label for="trails-size">Nombre de particules</label>
+            <input id="trails-size" type="number" value="30">
+        </div>
+
+        <h2>Couleurs</h2>
+        <div style="display: flex">
+            <div style="margin-right: 100px">
+                <strong>Arrière-plan</strong>
+                <div class="parameter">
+                    <label for="background-color">Couleur</label>
+                    <input type="color" id="background-color">
+                </div>
+                <div class="parameter">
+                    <label for="background-opacity">Opacité</label>
+                    <input id="background-opacity" type="range" min="0" max="1" step="0.05" value="1">
+                    <span id="background-opacity-text">1</span>
+                </div>
+            </div>
+
+            <div>
+                <strong>Particules</strong>
+                <div class="parameter">
+                    <input type="checkbox" id="particles-multicolor">
+                    <label for="particles-multicolor">Multicolor</label>
+                </div>
+                <div class="parameter" id="particles-color-parameter">
+                    <label for="particles-color">Couleur</label>
+                    <input type="color" id="particles-color" value="#ff0000">
+                </div>
+                <div class="parameter">
+                    <label for="particles-opacity">Opacité</label>
+                    <input id="particles-opacity" type="range" min="0" max="1" step="0.05" value="0.4">
+                    <span id="particles-opacity-text">0.4</span>
+                </div>
+            </div>
+        </div>
+
+        <h2>Bruit perlin</h2>
+        <div class="parameter">
+            <label for="perlin-zoom">Zoom</label>
+            <input id="perlin-zoom" type="range" min="1" max="100" step="1" value="10">
+            <span id="perlin-zoom-text">10</span>
+        </div>
+
+        <h2>Physiques</h2>
+        <div class="parameter">
+            <label for="particles-count">Nombre de particules</label>
+            <input id="particles-count" type="number" value="1000">
+        </div>
+        <div class="parameter">
+            <label for="speed">Vitesse des particules</label>
+            <input id="speed" type="number" value="5">
+        </div>
+        <div class="parameter">
+            <label for="slipperiness">Glissement des particules</label>
+            <input id="slipperiness" type="range" min="0" max="1" step="0.05" value="0.3">
+            <span id="slipperiness-text">0.3</span>
+        </div>
+    </div>
 </body>
 </html>
