--- a/flow-fields.html
+++ b/flow-fields.html
@@ -8,10 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <canvas id="game"></canvas>
-    <!--MAIN SCRIPT-->
-    <script src="./js/perlin.js"></script>
-    <script src="./js/script.js"></script>
+    <canvas id="display"></canvas>
 
     <div id="settings">
         <h1>Paramètres</h1>
@@ -25,7 +22,7 @@
             <label for="show-trails">Afficher les tracés des particules</label>
         </div>
         <div class="parameter" id="trails-size-parameter" style="display: none">
-            <label for="trails-size">Nombre de particules</label>
+            <label for="trails-size">Taille des tracés</label>
             <input id="trails-size" type="number" value="30">
         </div>
 
@@ -40,7 +37,7 @@
                 <div class="parameter">
                     <label for="background-opacity">Opacité</label>
                     <input id="background-opacity" type="range" min="0" max="1" step="0.05" value="1">
-                    <span id="background-opacity-text">1</span>
+                    <span id="background-opacity-text" style="width: 0">1</span>
                 </div>
             </div>
 
@@ -84,5 +81,10 @@
             <span id="slipperiness-text">0.3</span>
         </div>
     </div>
+
+    <!--MAIN SCRIPT-->
+    <script src="./js/perlin.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/settings.js"></script>
 </body>
 </html>
