--- a/flow-fields.html
+++ b/flow-fields.html
@@ -80,6 +80,10 @@
             <input id="slipperiness" type="range" min="0" max="1" step="0.05" value="0.3">
             <span id="slipperiness-text">0.3</span>
         </div>
+        <div class="parameter">
+            <input id="regenerate-particles" type="checkbox">
+            <label for="regenerate-particles">Faire réapparaitre les particules</label>
+        </div>
     </div>
 
     <!--MAIN SCRIPT-->
