--- a/flow-fields.html
+++ b/flow-fields.html
@@ -14,7 +14,7 @@
         <h1>Paramètres</h1>
         <h2>Affichage</h2>
         <div class="parameter">
-            <input id="reset-screen" type="checkbox" checked>
+            <input id="reset-screen" type="checkbox">
             <label for="reset-screen">Effacer l'écran à chaque frame</label>
         </div>
         <div class="parameter">
@@ -61,7 +61,7 @@
 
         <h2>Bruit perlin</h2>
         <div class="parameter">
-            <label for="perlin-zoom">Zoom</label>
+            <label for="perlin-zoom">Taille</label>
             <input id="perlin-zoom" type="range" min="1" max="100" step="1" value="10">
             <span id="perlin-zoom-text">10</span>
         </div>
@@ -69,7 +69,7 @@
         <h2>Physiques</h2>
         <div class="parameter">
             <label for="particles-count">Nombre de particules</label>
-            <input id="particles-count" type="number" value="1000">
+            <input id="particles-count" type="number" value="10000">
         </div>
         <div class="parameter">
             <label for="speed">Vitesse des particules</label>
@@ -84,6 +84,7 @@
             <input id="regenerate-particles" type="checkbox">
             <label for="regenerate-particles">Faire réapparaitre les particules</label>
         </div>
+        <button onclick="start()">Lancer</button>
     </div>
 
     <!--MAIN SCRIPT-->
