--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
             <label for="trails-size">Taille des tracés</label>
             <input id="trails-size" type="number" value="30">
         </div>
+        <div class="parameter">
+            <label for="screen-shade">Assombrissement de l'écran</label>
+            <input id="screen-shade" type="range" value="1" min="0" max="1" step="0.01">
+            <span id="screen-shade-text">1</span>
+        </div>
 
         <h2>Couleurs</h2>
         <div style="display: flex">
